--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,5 @@ STRIPE_API_KEY=sk_test_51IzSpTIRbojpBYlsJgcVTVIGhlrtOW6Zw8ovdRzkaJ5dQANK2k5ceqWJ
 # Github
 GITHUB_CLIENT_ID=a698ad512368d70deaef
 GITHUB_CLIENT_SECRET=c4800a5794f0e7eb3b83da8c6d74e598c2c41386
+#FaunaDB
+FAUNADB_KEY=fnAELOxBFaACA1Kl4qXVGm3tQ6e4AXJn0Ka_-iXB
