--- a/.env.local
+++ b/.env.local
@@ -4,8 +4,14 @@ NEXT_PUBLIC_STRIPE_PUBLIC_KEY=pk_test_51IzSpTIRbojpBYlsealppnm2wN7gje6tLCX3QXAbR
 STRIPE_WEBHOOK_SECRET=whsec_7uqYwSEEo5V6bBtc63AxhKA5l1IKTjAS
 STRIPE_SUCCESS_URL=http://localhost:3000/posts
 STRIPE_CANCEL_URL=http://localhost:3000
+
 # Github
 GITHUB_CLIENT_ID=a698ad512368d70deaef
 GITHUB_CLIENT_SECRET=c4800a5794f0e7eb3b83da8c6d74e598c2c41386
-#FaunaDB
+
+# FaunaDB
 FAUNADB_KEY=fnAELOxBFaACA1Kl4qXVGm3tQ6e4AXJn0Ka_-iXB
+
+# Primisc CMS
+PRISMIC_ENDPOINT=https://ignews1112.cdn.prismic.io/api/v2
+PRISMIC_ACCESS_TOKEN=MC5ZTXZIc0JNQUFDUUFsSEls.77-9Z--_ve-_vT9P77-9GO-_ve-_ve-_vVnvv73vv73vv71eSe-_ve-_ve-_vXbvv70hK--_vX_vv73vv70abu-_ve-_vQ
