--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
     "stripe": "^8.153.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@types/node": "^15.12.1",
     "@types/react": "^17.0.9",
+    "babel-jest": "^27.4.5",
+    "jest": "^27.4.5",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.3.2"
   }
 }
