--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^15.12.1",
     "@types/react": "^17.0.9",
     "babel-jest": "^27.4.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.5",
     "jest-dom": "^4.0.0",
     "typescript": "^4.3.2"
