--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.5",
     "jest-dom": "^4.0.0",
+    "jest-mock": "^27.4.2",
     "typescript": "^4.3.2"
   }
 }
